--- a/index.html
+++ b/index.html
@@ -3,21 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- 🔰 Manifesto PWA -->
-    <link rel="manifest" href="/manifest.webmanifest" />
-    <meta name="theme-color" content="#059669" />
-
-    <!-- 💎 Título y estilos -->
-    <title>Vida Divina · Catálogo Interactivo</title>
-    <link rel="icon" type="image/png" href="/icon-192.png" />
+    <title>Vida Divina</title>
   </head>
-
-  <body class="bg-emerald-50 text-gray-900">
-    <!-- Contenedor principal de la app -->
+  <body>
     <div id="root"></div>
-
-    <!-- Script principal generado por Vite -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
